# FER.ICG

./: README.md
LaboratoryExercise1/: .gitignore  task1.py  task2.py  task3.py
LaboratoryExercise2/: CMakeLists.txt  main.cpp
LaboratoryExercise3/: .gitignore  CMakeLists.txt  bresenham.cpp  bresenham.h  main.cpp
LaboratoryExercise4/: CMakeLists.txt  main.cpp
